<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/main_explain_howto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:textAppearance="?android:attr/textAppearanceMedium"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/options"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp"
          >

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/main_display_camera_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/main_handle_keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/double_click_delay"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="8dp"
            >

          <RadioButton
              android:id="@+id/main_buttondelay_short"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/short_300ms_delay"
              android:textAppearance="?android:attr/textAppearanceSmall"
              />

          <RadioButton
              android:id="@+id/main_buttondelay_default"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/default_600ms_delay"
              android:textAppearance="?android:attr/textAppearanceSmall"
              />

          <RadioButton
              android:id="@+id/main_buttondelay_long"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/long_1000ms_delay"
              android:textAppearance="?android:attr/textAppearanceSmall"
              />

        </RadioGroup>

      </LinearLayout>

    </ScrollView>

  </LinearLayout>

</LinearLayout>